@@ -7,7 +7,7 @@
  *      definitions for the pqxx::CachedResult class and support classes.
  *   pqxx::CachedResult is a lazy-fetching, transparently-cached result set
  *
- * Copyright (c) 2001-2002, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2001-2003, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  *-------------------------------------------------------------------------
  */
