@@ -6,7 +6,7 @@
  *   DESCRIPTION
  *      Compiler deficiency workarounds
  *
- * Copyright (c) 2002, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2002-2003, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  *-------------------------------------------------------------------------
  */
