@@ -8,7 +8,7 @@
  *   pqxx::TransactionItf defines the interface for any abstract class that
  *   represents a database transaction
  *
- * Copyright (c) 2001-2002, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2001-2003, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  *-------------------------------------------------------------------------
  */
