@@ -7,7 +7,7 @@
  *      definition of the pqxx::Transactor class.
  *   pqxx::Transactor is a framework-style wrapper for safe transactions
  *
- * Copyright (c) 2001-2002, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2001-2003, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  *-------------------------------------------------------------------------
  */
