@@ -7,7 +7,7 @@
  *      implementation of the pqxx::CachedResult class.
  *   pqxx::CachedResult transparently fetches and caches query results on demand
  *
- * Copyright (c) 2001-2002, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2001-2003, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  *-------------------------------------------------------------------------
  */
