@@ -7,7 +7,7 @@
  *      implementation of the pqxx::NonTransaction class.
  *   pqxx::Transaction provides nontransactional database access
  *
- * Copyright (c) 2002, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2002-2003, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  *-------------------------------------------------------------------------
  */
